# designLib-mcp

./: .gitignore  README.md  pyproject.toml
data/: ios_family_medians.json
docs/: inspiration_pages_schema.md  self-hosting.md
mcp-migration/animations/: PROGRESS.md  PROTOCOL.md
migrations/: 002_platform_column.sql  003_ios_extensions.sql  004_dna_columns.sql  005_content_catalog.sql  007_inspiration_pages_use_when_and_relax_prompt.sql  selfhosted_schema.sql
scripts/: apply_migrations.py  compute_ios_medians.py  derive_generation_prompts.py  derive_use_when.py  export_via_rest.py  ingest_content_catalog.py  ingest_inspiration_pages.py  ingest_ios.py  ingest_web.py  validate_extracted.py
src/designlib_mcp/: config.py  server.py
tests/: conftest.py  test_config.py
tests/e2e/: test_content_catalog_e2e.py  test_mcp_e2e.py
tests/fixtures/: ios_aggregated_sample.json
tests/formatting/: test_truncate.py
tests/models/: test_chart_type.py  test_common.py  test_icon.py  test_inspiration_page.py  test_landing_pattern.py
tests/repository/: test_animations_repo.py  test_base.py  test_content_catalog_repo.py  test_domains_repo.py  test_font_pairs_repo.py  test_inspiration_normalizer.py  test_inspiration_pages_repo.py  test_palettes_repo.py  test_styles_repo.py  test_supabase_smoke.py
tests/scripts/: test_apply_migrations.py  test_compute_ios_medians.py  test_ingest_content_catalog.py  test_ingest_web.py
tests/services/: test_cross_links.py
tests/tools/: test_animations_tool.py  test_content_catalog_tool.py  test_domains_tool.py  test_font_pairs_tool.py  (+3 more)
(+141 files in other folders)
