[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "designlib-mcp"
version = "0.1.0"
description = "MCP server exposing a curated design-knowledge catalog (web + iOS)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Roman Pluzhnikov" }]
dependencies = [
  "fastmcp>=0.4",
  "pydantic>=2.6",
  "supabase>=2.4",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "psycopg[binary]>=3.1",
  "numpy>=1.26",
  "colormath2>=3.0.3",
]

[project.scripts]
designlib-mcp = "designlib_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/designlib_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]
markers = [
  "integration: tests that require a live Supabase",
]
